--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -226,7 +226,7 @@ a:hover {
 }
 
 .card .title {
-  padding-bottom: 2rem;
+  padding-bottom: 10px;
   margin-top: 0em;
   font-size: 0.65em;
 }
@@ -364,6 +364,19 @@ input[type="text"] {
 
 .skill-card .title a {
   color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.description {
+  position: absolute;
+  top: 3em;
+  z-index: 1;
+  font-size: 14px;
+  text-align: center;
+  margin-top: 10px;
+  padding: 10px;
+  /* font-size: 0.8em; */
 }
 
 /*social icons*/
